<resources>
    <string name="app_name">Budget Buddy</string>
    <string name="app_tagline">Control your finances easier</string>
    <string name="upcoming_payments">Upcoming payments</string>
    <string name="shopping_list">Shopping List</string>
    <string name="uk_bank_holidays">UK Bank Holidays</string>
    <string name="add_payment_fab_content_desc">Add payment</string>
    <string name="payments_loading_error_message">There was an error loading your payments. Please try again later.</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="payment_title">Payment title</string>
    <string name="payment_amount">Payment amount</string>
    <string name="next_payment_date">Next payment date</string>
    <string name="payment_frequency">Payment frequency</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="loading">Loading</string>
    <string name="single_payment">Single payment</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="quarterly">Quarterly</string>
    <string name="biannually">Biannually</string>
    <string name="annually">Annually</string>
    <string name="select_date">Select date</string>
    <string name="payment_history">Payment History</string>
    <string name="next_payments">Next Payments</string>
    <string name="bank_holidays">Bank Holidays</string>
    <string name="add_shopping_item">Add shopping item</string>
    <string name="add_new_item">Add new item</string>
    <string name="shopping_loading_error_message">There was an error loading your shopping list. Please try again later.</string>
    <string name="payments">Payments</string>
    <string name="history">History</string>
    <string name="shopping">Shopping</string>
    <string name="payments_due_today">Payments due today</string>
    <string name="overdue_payments">Overdue payments</string>
    <string name="notifications">Notifications</string>
    <string name="date">Date</string>
    <string name="day">Day</string>
    <string name="bank_holiday">Bank holiday</string>
    <string name="edit_payment">Edit Payment</string>
    <string name="add_payment">Add Payment</string>

    <string name="delete_selected_items_message">Are you sure you want to delete the selected item(s)?</string>

    <string name="delete_checked_items">Delete checked items</string>
    <string name="delete_checked_items_message">Are you sure you want to delete all checked items?</string>

    <string name="delete_unchecked_items">Delete unchecked items</string>
    <string name="delete_unchecked_items_message">Are you sure you want to delete all unchecked items?</string>

    <string name="delete_all_items">Delete all items</string>
    <string name="delete_all_items_message">Are you sure you want to delete all items?</string>

    <string name="delete_payment_message">Are you sure you want to delete this payment?</string>
    <string name="discard_changes_message">Are you sure you want to discard your changes?</string>

    <string name="payment_moved_to_history">Payment \'%s\' moved to history</string>

    <string name="payment_notification_channel_name">Payment Reminders</string>
    <string name="payment_notification_channel_description">Notifications for upcoming payments</string>

    <string name="payment_reminder_title">Payment Reminder</string>
    <string name="payment_reminder_content">Payment %1$s is due tomorrow.</string>

    <string name="payment_notification_switch_text">Receive reminders about upcoming payments</string>
    <string name="payment_notification_permission_title">Notification Permission Required</string>
    <string name="payment_notification_permission_message">To receive reminders about your payments, please allow the app to send notifications. You can change this permission anytime later in your device\'s system settings.</string>
    <string name="payment_notification_permission_denied">Permission denied. Notifications won\'t be shown.</string>

    <string name="region_england_and_wales">England and Wales</string>
    <string name="region_scotland">Scotland</string>
    <string name="region_northern_ireland">Northern Ireland</string>

    <string name="unknown_region">Unknown Region</string>
    <string name="invalid_position">Invalid position</string>

    <string name="next_bank_holiday_text">The next bank holiday in %s is</string>
    <string name="upcoming_bank_holidays_text">Upcoming bank holidays in %s</string>
    <string name="loading_error_message">There was an error loading data.\nPlease try again later.</string>
    <string name="undo">Undo</string>

    <string name="shortcut_shopping_list_short_label">Shopping List</string>
    <string name="shortcut_shopping_list_long_label">Open Shopping List</string>
    <string name="shortcut_bank_holiday_short_label">Bank Holidays</string>
    <string name="shortcut_bank_holiday_long_label">Open Bank Holidays</string>

    <string name="error_invalid_date_format">Enter the date in the format dd/MM/yyyy</string>
    <string name="error_date_cannot_be_earlier_than_today">The date cannot be earlier than today</string>
    <string name="error_invalid_date">Invalid date</string>

    <string name="action_info">Info</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_move_to_history">Move to history</string>
    <string name="open_payment_history">Open Payment History</string>

    <string name="edit">Edit</string>
    <string name="complete">Complete</string>
    <string name="restore">Restore</string>
    <string name="delete">Delete</string>
    <string name="delete_selected">Delete selected</string>
    <string name="add_item">Add item</string>
    <string name="more_options">More options</string>
    <string name="dropdown_select_multiple">Select multiple</string>
    <string name="dropdown_delete_all">Delete all</string>
    <string name="dropdown_delete_checked">Delete checked</string>
    <string name="dropdown_delete_unchecked">Delete unchecked</string>
</resources>
